--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@expo/webpack-config": "^19.0.0",
     "expo": "^49.0.22",
     "expo-status-bar": "~1.6.0",
+    "nativewind": "^2.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.10",
+    "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.22.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
