--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native": "0.72.10",
     "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
-    "react-router-native": "^6.22.1"
+    "react-router-native": "^6.22.1",
+    "sync-storage": "^0.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
